src/modules/33-auth-settings/pages/subscriptions/SubscriptionsPage.module.scss
/*
 * Copyright 2022 Harness Inc. All rights reserved.
 * Use of this source code is governed by the PolyForm Shield 1.0.0 license
 * that can be found in the licenses directory at the root of this repository, also available at
 * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
 */
.table {
  margin: var(--spacing-large);
  [role='cell'] {
    padding-right: var(--spacing-small);
  }
}

.exportButton {
  background-color: var(--primary-7);
  color: white;
  font-size: var(--font-size-small);
  padding: 4px 20px !important;
  min-height: 24px !important;
  height: 24px !important;
  border: solid 1px !important;
  border-radius: 4px;
}
.badgesContainer {
  height: 56px;
  display: flex;
  margin-bottom: 15px;

  .badge {
    display: flex;
    height: 32px;
    border-radius: 8px;
    padding: 8px 10px;
    background-color: var(--yellow-50);
    align-items: center;
    margin-right: 8px;

    .badgeText {
      margin-left: var(--spacing-small);
      font-weight: 500;
      font-size: 12px;
      line-height: 16px;
      letter-spacing: 0.2px;
      color: var(--primary-7);
    }
  }
  .failed24HrsExecutionsBadge {
    background-color: var(--red-50);
  }
  .runningExecutions {
    background-color: var(--primary-1);
    margin-top: 5px;
  }
}
.moduleSelectCards {
  margin-bottom: 25px !important;
  .moduleSelectCard {
    padding: var(--spacing-small) !important;
    cursor: pointer;
    margin: 0 31px;

    &.cd {
      box-shadow: unset !important;
      background-color: var(--green-50) !important;
      border-color: var(--green-500) !important;
    }
    &.ci {
      box-shadow: unset !important;
      background-color: var(--primary-1) !important;
      border-color: var(--primary-5) !important;
    }
    &.cv {
      box-shadow: unset !important;
      background-color: var(--purple-50) !important;
      border-color: var(--purple-600) !important;
    }
    &.cf {
      box-shadow: unset !important;
      background-color: var(--orange-50) !important;
      border-color: var(--orange-500) !important;
    }
    &.ce {
      box-shadow: unset !important;
      background-color: var(--teal-50) !important;
      border-color: var(--teal-500) !important;
    }
    &.sto {
      box-shadow: unset !important;
      background-color: var(--primary-1) !important;
      border-color: var(--primary-5) !important;
    }
  }

  :first-child {
    margin-left: 0;
  }

  :last-child {
    margin-right: 0;
  }
}

.subscriptionTabButtons {
  margin-bottom: 25px !important;

  .subscriptionTabButton {
    cursor: pointer;
    --button-hover-shadow: var(--grey-50) !important;
    background-color: var(--grey-50) !important;
    color: var(--primary-7) !important;

    &.selected {
      background-color: var(--primary-9) !important;
      color: var(--white) !important;
    }
  }
}

.moduleIcons {
  svg {
    width: 200px;
    height: 50px;
  }
}

.banner {
  box-shadow: 0px 0px 1px rgba(40, 41, 61, 0.08), 0px 0.5px 2px rgba(96, 97, 112, 0.16);

  &.expiryCountdown {
    background: var(--orange-50) !important;
  }

  &.expired {
    background: var(--red-50) !important;
  }

  .bannerIcon {
    margin-right: var(--spacing-large) !important;
  }
}

.outterCard {
  min-width: 1000px;
}

.activeServiceLink {
  margin-top: 0px !important;
  color: var(--primary-7);
}

.noDataCard {
  margin-top: 0px !important;
  justify-content: center !important;
}
.noDataCardContainer {
  max-height: 100px !important;
}

.orgDropdown {
  margin-bottom: var(--spacing-medium) !important;
  width: 250px;
  margin-left: 50px;
}

.fetchButton {
  cursor: pointer;
  margin-bottom: 15px !important;
}

.peakClass {
  border: 1px dashed var(--red-600);
  width: 25px;
}
.subClass {
  border: 1px solid var(--primary-7);
  width: 25px;
}
.overUseClass {
  width: 12px;
  height: 12px;
  left: 10px;
  top: 29.5px;

  /* Status/Green/Green 900 */

  background: var(--green-900);
  border-radius: 3px;
}
.summaryCardsContainer {
  margin-left: 20px;
  display: flex;
  .summaryCard {
    min-width: 142px;
    min-height: 76px;
    background-color: var(--primary-1) !important;
    margin-right: var(--spacing-4) !important;
    border-radius: 4px;
    padding-left: var(--spacing-4) !important;
    padding-right: var(--spacing-4) !important;

    .cardTitle {
      font-weight: 500;
      font-size: 12px;
      line-height: 16px;
      letter-spacing: 0.2px;
      color: var(--gray-700);
      margin-top: 12px;
    }
    .frequencyContainer {
      align-items: center;
      margin-right: var(--spacing-medium);
      display: flex;
      justify-content: space-between;
      .frequencyCount {
        margin-top: 7px;
        font-weight: 600;
        font-size: 24px;
        line-height: 32px;
        display: flex;
        align-items: center;
        color: var(--grey-1000);
      }
    }
  }
}

